--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,12 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 3px solid var(--third-color);
-  
-    border-radius: 5px; */
   transition: 0.5s;
-  /* opacity: 0.7; */
   position: relative;
+  cursor: pointer;
 
 }
 .card-pokemon:hover {
@@ -35,7 +32,6 @@
   font-size: 1.5rem;
   letter-spacing: 4px;
   color: var(--secondary-color);
-
   text-shadow: 0 0 3px var(--third-color), 0 0 5px var(--fourth-color);
 }
 
@@ -44,9 +40,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 1;
-  border: 4px solid var(--third-color);
-
+  z-index: 2;
+  border: 5px solid var(--third-color);
   border-radius: 6px;
+}
+
+.container-favourite{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
