--- a/src/components/Grid/grid.css
+++ b/src/components/Grid/grid.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 25px;
     justify-items: center;
-    margin: 2rem;
+    padding: 2rem;
 }
 
 @media screen and (max-width: 426px) {
