--- a/src/components/ListItem/listItem.css
+++ b/src/components/ListItem/listItem.css
@@ -1,38 +1,45 @@
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-.listPokemon{
-    display: flex;
-    margin: 1rem;
-width: 70%;
-justify-content: center;
-    align-items: center;
-    position: relative;
-    padding: 0.5rem;
-}
-
-.listPokemon li, button{
-    z-index: 2;
+.listPokemon {
+  display: flex;
+  margin: 1rem;
+  width: 70%;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 0.5rem;
 }
 
-.bg-opacity-list{
-    background: linear-gradient(
-        180deg,
-        rgba(255, 31, 31, 0.8295693277310925) 0%,
-        rgba(251, 215, 67, 1) 31%,
-        rgba(93, 185, 255, 1) 100%
-      );
-      position: absolute;
-      z-index: 1;
-      opacity: 0.7;
-      width: 100%;
-      height: 100%;
-      border-radius: 6px;
+.listPokemon li,
+button {
+  z-index: 2;
 }
+
+.bg-opacity-list {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 31, 31, 0.8295693277310925) 0%,
+    rgba(251, 215, 67, 1) 31%,
+    rgba(93, 185, 255, 1) 100%
+  );
+  position: absolute;
+  z-index: 1;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+}
+
 .listPokemon li {
-font-size: 1.5rem;
-color: var(--fourth-color);
-cursor: pointer;
-text-transform: capitalize;
-letter-spacing: 3px;
+  font-size: 1.5rem;
+  color: var(--fourth-color);
+  cursor: pointer;
+  text-transform: capitalize;
+  letter-spacing: 3px;
+}
+
+.darkList li {
+    color: var(--third-color);
+    text-shadow: 0 0 3px var(--fourth-color), 0 0 5px var(--fourth-color);
 }
