--- a/src/components/Pagination/pagination.css
+++ b/src/components/Pagination/pagination.css
@@ -12,29 +12,35 @@
   padding: 1rem;
 }
 
-/* CSS */
 .pagination-container button {
   align-items: center;
   background-color: white;
   border-radius: 12px;
   box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, 0.1) 0 6px 20px;
-
   color: var(--fourth-color);
   cursor: pointer;
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
-
   outline: none;
-  padding: 1rem 1.2rem;
+  padding: 0.8rem 1.2rem;
   text-align: center;
   text-decoration: none;
   transition: box-shadow 0.2s, -webkit-box-shadow 0.2s;
-font-size: 1rem;
+  font-size: 1rem;
   border: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+.darkButton button{
+    background-color: var(--fourth-color);
+    color: white;
+}
+
+ .darkButton button:hover{
+    box-shadow: white 0 0 0 3px, transparent 0 0 0 0 !important;
 }
 
 .pagination-container button:disabled {
