--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,23 @@ body{
   background-color: var(--darkmode);
 
 }
+.empty-message-dark{
+  background-color: var(--darkmode);
+  height: 100vh;
+  text-align: center;
+  padding: 5rem;
+  color: var(--third-color);
+  text-shadow: rgba(93,185,255,0.9) 0px 0px 37px;
+
+
+}
+
+.empty-message h2{
+  text-align: center;
+  margin: 5rem;
+  color: var(--fourth-color);
+  
+}
 
 :root {
   --main-color: #FF1F1F;
