--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -20,18 +20,15 @@
   font-size: 1.8rem;
 text-align: center;
 color: var(--fourth-color);
-
-
-
 }
 
 .container-detail {
   background-color: var(--third-color);
   padding: 1.3rem;
   display: flex;
-
   justify-content: space-around;
 }
+
 .container-detail h3 {
   text-align: center;
   border-radius: 5px;
@@ -39,14 +36,35 @@ color: var(--fourth-color);
   margin-bottom: 0.5rem;
   background-color: var(--secondary-color);
   color: var(--fourth-color);
+ 
 }
 .container-detail ul {
   list-style: none;
   color: var(--fourth-color);
   text-transform: capitalize;
   font-size: 1.2rem;
+  font-weight: 700;
+  font-family: "Quicksand", sans-serif;
 }
 
 .image-detail{
   width: 20%;
+}
+
+@media screen and (max-width: 426px) {
+  .container-detail{
+       flex-direction: column;
+  }
+  .container-detail ul:last-child {
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .container-detail{
+       flex-direction: column;
+  }
+  .container-detail ul:last-child {
+    margin-bottom: 1rem;
+  }
 }
